--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="hero-container">
                 <h1 class="h-title">Le<span id="h-title_s">&</span>Co</h1>
                 <h3 class="hs-title">Legumbres & Comoditties</h3>
-                <a class="h-button" href="#about">Descubrenos!!</a>
+                <a class="h-button" href="#about">Descubrenos!!!</a>
             </div>
         </div>
     </div>
