--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     </div>
     <a class="btn-menu btn" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button"
-        aria-controls="offcanvasExample"><i class=" fa-solid fa-bars-staggered fa-lg"></i> Menu
+        aria-controls="offcanvasExample"><i class=" fa-solid fa-bars-staggered fa-lg"></i> MENU
     </a>
     <!----------------------------------------------- ABOUT ------------------------------------------------->
     <section class="about-container ">
@@ -38,7 +38,7 @@
                 <div class="f-item card">
                     <div class="card-body">
                         <img src="img/AG-II.jpg" class="card_img" alt="...">
-                        <h5 class="card-title item-card_title">Special title treatment</h5>
+                        <h5 class="card-title item-card_title1">Special title treatment</h5>
                         <p class="card-text item-card_text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Assumenda, sunt quibusdam! Odio provident quam dolorem perspiciatis corrupti tempora eum,
                             natus dignissimos, cupiditate voluptatem maxime ipsam modi facere dicta repellendus illum.
@@ -61,7 +61,7 @@
                             integración de la inversión productiva en cada una de sus etapas.Creemos que los negocios
                             exitosos se logran integrando toda la cadena productiva, desde la planificación del cultivo
                             hasta la comercialización de su producido.</p>
-                        <h5 class="card-title item-card_title">Special title treatment</h5>
+                        <h5 class="card-title item-card_title2">Special title treatment</h5>
 
                     </div>
                 </div>
