--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                             exitosos se logran integrando toda la cadena productiva, desde la planificación del cultivo
                             hasta la comercialización de su producido.</p>
                         <h5 class="card-title item-card_title2">Special title treatment</h5>
+                        <img src="HERO.webp" alt="">
 
                     </div>
                 </div>
